# godot-script-switcher

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_release.yml
godot/addons/godot_script_switcher/: godot_script_switcher.gd  godot_script_switcher.gdextension  godot_script_switcher_panel.tscn  plugin.cfg  script_switcher_panel.tscn
src/: script_switcher.cpp  script_switcher.hpp
